# cube-lighting-renderer

./: CMakeLists.txt  README.md
shaders/: light_source_frag_shader.glsl  light_source_vertex_shader.glsl  obj_frag_shader.glsl  obj_vertex_shader.glsl
src/: main.cpp
